# platform.core.multimedia.mmsvc-recorder

./: AUTHORS  CMakeLists.txt  project.config
include/: mmsvc_recorder.h  mmsvc_recorder_private.h  recorder.h  recorder_private.h
legacy/: CMakeLists.txt
legacy/include/: legacy_recorder.h  legacy_recorder_internal.h  legacy_recorder_private.h
legacy/src/: legacy_recorder.c  legacy_recorder_internal.c
muse/: CMakeLists.txt  muse-recorder.pc.in
muse/include/: muse_recorder.h  muse_recorder_msg.h
muse/src/: muse_recorder_dispatcher.c  muse_recorder_ipc.c
mused/: AUTHORS  CMakeLists.txt  mused-recorder.pc.in
mused/include/: mmsvc_recorder.h  mmsvc_recorder_msg.h  mused_recorder.h  mused_recorder_msg.h
mused/src/: mmsvc_recorder_dispatcher.c  mmsvc_recorder_ipc.c
packaging/: capi-media-recorder.spec  mmsvc-recorder.spec
src/: mmsvc_recorder.c  recorder.c
